src/objects/Shop__c.object
<CustomObject>
    <fields>
        <fullName>Annual_Estimated_Revenue__c</fullName>
        <formula>Monthly_Revenue__c * 12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Estimated Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Corporation__c</fullName>
        <label>Corporation</label>
        <referenceTo>Corporation__c</referenceTo>
        <relationshipLabel>Shops</relationshipLabel>
        <relationshipName>Shops</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Director__c</fullName>
        <label>Director</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Revenue__c</fullName>
        <label>Monthly Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Shop</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Shop Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shops</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Director_field_non_blank</fullName>
        <active>true</active>
        <description>Director field non blank if monthly revenue more then $100k</description>
        <errorConditionFormula>Monthly_Revenue__c &gt; 100000 &amp;&amp;  ISBLANK(Director__c)</errorConditionFormula>
        <errorMessage>Director field must be nonblank if revenue more then 100k per month</errorMessage>
    </validationRules>
</CustomObject>